# AmazonBookParser

./: .replit  DEBUG_GUIDE.md  LOCAL_USAGE_GUIDE.md  README.md  amazon_auth.py  debug_utils.py  gui.py  kindle_api_book.json  kindle_api_book.txt  kindle_api_scraper.py  kindle_api_scraper_enhanced.py  kindle_auto_api_scraper.py  kindle_book_info.txt  kindle_light_scraper.py  kindle_scraper.py  kindle_web_book.txt  kindle_web_scraper.py  main.py  pyproject.toml  replit.nix  sample_kindle_response.json  web_scraper.py
attached_assets/: 20250418-170544_book_opened_page.html  Pasted--Kindle-Cloud-Reader--1744808934687.txt  Pasted--base-analityk-ofis-github-AmazonBookParser-1-python-main-py-2025-04-18-15-58-36-908--1744981222495.txt  Pasted--base-analityk-ofis-github-AmazonBookParser-1-python-main-py-2025-04-18-16-07-05-271--1744981895126.txt  Pasted--base-analityk-ofis-github-AmazonBookParser-1-python-main-py-2025-04-18-16-28-21-891--1744983085091.txt  Pasted--base-analityk-ofis-github-AmazonBookParser-1-python-main-py-2025-04-18-17-04-49-630--1744985363627.txt  Pasted--base-analityk-ofis-github-AmazonBookParser-python-main-py-Serving-Flask-app-main--1744811929144.txt  Pasted--base-analityk-ofis-github-AmazonBookParser-python-main-py-Serving-Flask-app-main--1744812465054.txt  Pasted--v0-36-0-2025-04-18-09-10-46-159-INFO-About-to-download-new-driver-from-https-github-com-mozil-1744956759516.txt  Pasted-2025-04-16-17-27-05-108-INFO-127-0-0-1-16-Apr-2025-17-27-05-GET-get-status-HTTP-1-1-200-1744813653724.txt  (+5 more)
templates/: api_scraper.html  auto_api_scraper.html  index.html  (+3 more)
(+1 files in other folders)
